samples/_failures_safe/1761440949_8ef5a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f0e6c9a.c: In function ‘main’:
./samples/SAFE/__tmp_3f0e6c9a.c:166:5: error: expected ‘,’ or ‘;’ at end of input
  166 |     Matrix *mat2 = create_matrix
      |     ^~~~~~
./samples/SAFE/__tmp_3f0e6c9a.c:166:5: error: expected declaration or statement at end of input
